Integrate recovery task creation into indexer. (#226)
Reworked the indexing path and addressed tech debt.

Merged KaldbKafkaWriter and KaldbKafkaConsumer into one class.
Merged all indexer capabilities into indexer class.
Refactored code to use Blobfs everywhere instead of S3BlobFs.
Refactored kaldb.java to consume a KaldbConfig object and create all it's sub-classes.
Rewrote KaldbDistributedQueryServiceTest and KaldbIntegrationTest using the new configurable Kaldb main class.